# outpace

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  compose.yml
.githooks/: pre-commit
.github/workflows/: armv7-portability.yml  compose.yml  hygiene.yml  release.yml
crates/ace-engine/: Cargo.toml
crates/ace-engine/src/: ace_provider.rs  broadcast.rs  broadcast_ingest.rs  broadcast_persist.rs  cli.rs  config.rs  hls.rs  http.rs  lib.rs  logts.rs  magnet.rs  main.rs  manager.rs  provider.rs  routes.rs  rtmp.rs  rtmp_ts.rs  runtime.rs  server_api.rs  session.rs  startup_buffer.rs  testprovider.rs  transport_url.rs
crates/ace-engine/tests/: multiclient.rs  reciprocate.rs
crates/ace-log/: Cargo.toml
crates/ace-log/src/: lib.rs
crates/ace-media/: Cargo.toml
crates/ace-media/src/: hls.rs  lib.rs  mpegts.rs
crates/ace-peer/: Cargo.toml
crates/ace-peer/src/: lib.rs  session.rs
crates/ace-swarm/: Cargo.toml
crates/ace-swarm/src/: dht.rs  dht_cache.rs  discover.rs  driver.rs  lib.rs  listen.rs  live.rs  logts.rs  portmap.rs  reachability.rs  resolve.rs  scheduler.rs  seed.rs  store.rs  types.rs  vod.rs
crates/ace-swarm/src/store/: disk.rs
crates/ace-swarm/tests/: inbound_seeder.rs  live_session.rs  pipeline.rs  resolve_metadata.rs
crates/ace-tracker/: Cargo.toml
crates/ace-tracker/src/: client.rs  codec.rs  lib.rs
crates/ace-wire/: Cargo.toml
crates/ace-wire/src/: bencode.rs  chunker.rs  extended.rs  handshake.rs  identity.rs  infohash.rs  lib.rs  live.rs  live_auth.rs  live_codec.rs  message.rs  peer_exchange.rs  reassembly.rs  signing_chunker.rs  transport.rs  ut_metadata.rs
crates/ace-wire/tests/: vectors.rs
docs/: RESUME.md  deployment.md  dht-routing-cache-measurement.md  linux-portability.md  native-api.md
docs/measurements/: 2026-07-11-dht-routing-cache.jsonl
docs/protocol/: compat-matrix.md  transport-file.md  wire-protocol.md
docs/protocol/notes/: 00-inventory.md  01-sandbox.md  02-test-streams.md  03-discovery-and-transport.md  05-crypto.md  07-node.md  07-transport.md  08-idmath-validation.md  08-key-finding-bittornado-lineage.md  10-interop.md  11-live-extended-handshake.md  12-transport-body-blocker.md  13-transport-descriptor.md  14-live-unchoke-recon.md  15-node-identity-cracked.md  16-livesourceauth-located.md  17-node-signature-cracked.md  18-identity-gate-passed.md  19-live-download-working.md  20-vlc-playback.md  21-seeder-ground-truth.md  22-live-edge-never-advances.md  23-reconnect-continuity.md  24-seeder-self-announce.md  25-source-node-b0-groundtruth.md  26-b1-loopback-milestone.md  27-b0-signing-cracked.md  28-b1-self-announce-and-infohash-wall.md  29-infohash-formula-cracked.md  30-official-consumer-proof-after-infohash-fix.md  31-official-consumer-connected-but-not-interested.md  32-official-consumer-requests-but-rejects-pieces.md  33-live-piece-header-timestamp-and-official-consumer.md  34-acestream-getstream-content-id-route.md  35-live-startup-static-upstream-and-id12-capture.md  36-rediscovery-after-stale-upstream.md  37-upstream-window-selection.md  38-reconnect-cursor-and-stale-window-rejection.md  39-provider-uses-scheduler-frontier.md  40-active-peer-state-for-provider.md  (+17 more)
docs/superpowers/plans/: 2026-06-28-phase0-protocol-recovery.md  2026-06-28-phase1-ace-wire.md  2026-06-28-phase2-tracker-peer.md  2026-06-29-outpace-daemon.md  2026-06-30-seeding-s1-compliance.md  2026-06-30-v2-offline-foundations.md  2026-07-01-rename-outpace-to-outpace.md  2026-07-02-outpace-cli-broadcast-play-serve.md  2026-07-03-disk-backed-piece-cache.md  2026-07-03-env-var-config-tunables.md  2026-07-03-rtmp-broadcast-ingest.md  2026-07-06-inbound-seeding-lifecycle.md  2026-07-07-live-recovery-config-and-reset.md  2026-07-07-transport-url-magnet-inputs.md  2026-07-08-vod-transport-playback.md  2026-07-14-extensionless-mpegts-playback.md  2026-07-14-native-hls-playback.md  2026-07-14-native-hls-title-metadata.md  2026-07-14-stream-metadata.md  2026-07-15-native-hls-clean-start.md  2026-07-15-sdt-service-name-title.md  2026-07-16-fast-portability-ci.md  2026-07-18-live-playback-prebuffer.md  2026-07-19-direct-ts-periodic-sdt.md
docs/superpowers/specs/: 2026-06-28-225219-implemented-code-review.md  2026-06-28-acestream-engine-reimplementation-design.md  2026-06-28-phase0-findings.md  2026-06-29-outpace-daemon-design.md  2026-06-30-compliance-seeding-broadcasting-design.md  2026-06-30-security-review-followups.md  2026-07-03-cache-config-and-disk-backing-design.md  2026-07-03-rtmp-broadcast-ingest-design.md  2026-07-05-persist-broadcast-state-design.md  2026-07-06-inbound-seeding-lifecycle-design.md  2026-07-07-live-recovery-config-and-reset-design.md  2026-07-07-release-binaries-and-docker-design.md  2026-07-07-transport-url-magnet-inputs-design.md  2026-07-08-vod-transport-playback-design.md  2026-07-14-extensionless-mpegts-playback-design.md  2026-07-14-native-hls-playback-design.md  2026-07-14-native-hls-title-metadata-design.md  2026-07-14-stream-metadata-design.md  2026-07-15-memory-hardening-design.md  2026-07-15-native-hls-clean-start-design.md  2026-07-15-sdt-service-name-title-design.md  2026-07-16-fast-portability-ci-design.md  2026-07-18-live-playback-prebuffer-design.md  2026-07-19-direct-ts-periodic-sdt-design.md
docs/testing/: interop-swarm.md
tests/vectors/media/: h264-keyframes.ts
tests/vectors/node-identity/: engine-extended-handshake.hex  infohash.txt
tools/: probe_old_engine_api.py
tools/ghidra/: LiveSourceAuth.sign.decompiled.txt  find_auth.java  find_funcs.java
tools/hygiene/: allowed-identifiers.txt  check_identifiers.py
tools/memsoak/: README.md  acestream_probe.sh  run.sh  slope.py
tools/swarmtest/: Cargo.toml
tools/swarmtest/assets/: engine.Dockerfile
tools/swarmtest/src/: assertions.rs  compose.rs  config.rs  engine.rs  httpd.rs  lib.rs  main.rs  peers.rs  report.rs  scenario.rs  tracker.rs  transport.rs
