[package]
name = "ace-engine"
version.workspace = true
edition = "2021"
license.workspace = true
repository.workspace = true

[[bin]]
name = "outpace"
path = "src/main.rs"

[lib]
name = "ace_engine"
path = "src/lib.rs"

[dependencies]
ace-wire = { path = "../ace-wire" }
ace-media = { path = "../ace-media" }
ace-swarm = { path = "../ace-swarm" }
ace-peer = { path = "../ace-peer" }
tokio = { version = "1", features = ["full"] }
bytes = "1"
async-trait = "0.1"
axum = "0.7"
clap = { version = "4", features = ["derive"] }
tower = { version = "0.5", features = ["util"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
rand = "0.8"
rtmp-rs = "0.5"
base64ct = { version = "1.8", features = ["alloc"] }
hex = "0.4"

[dev-dependencies]
sha1 = "0.10"
