[package]
name = "ace-peer"
version.workspace = true
edition = "2021"
license.workspace = true
repository.workspace = true

[dependencies]
ace-wire = { path = "../ace-wire" }
tokio = { version = "1", features = ["net", "io-util", "rt", "macros", "time"] }

[dev-dependencies]
hex = "0.4"
tokio = { version = "1", features = ["net", "io-util", "rt", "macros", "time", "rt-multi-thread", "test-util"] }
