[package]
name = "ace-swarm"
version = "0.1.0"
edition = "2021"

[dependencies]
ace-wire = { path = "../ace-wire" }
ace-peer = { path = "../ace-peer" }
ace-tracker = { path = "../ace-tracker" }
tokio = { version = "1", features = ["io-util", "macros", "net", "rt", "sync"] }
bytes = "1"

[dev-dependencies]
ace-media = { path = "../ace-media" }
tokio = { version = "1", features = ["io-util", "macros", "rt-multi-thread"] }
aes = "0.9"
cbc = { version = "0.2", features = ["alloc"] }
