[package]
name = "ace-swarm"
version.workspace = true
edition = "2021"
license.workspace = true
repository.workspace = true

[dependencies]
ace-wire = { path = "../ace-wire" }
ace-peer = { path = "../ace-peer" }
ace-tracker = { path = "../ace-tracker" }
tokio = { version = "1", features = ["io-util", "macros", "net", "rt", "sync", "time"] }
bytes = "1"
rand = "0.8"
sha1 = "0.10"
base64ct = { version = "1.8", features = ["alloc"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
hex = "0.4"
igd-next = { version = "0.17", features = ["aio_tokio"] }
crab_nat = "0.8"
serde = { version = "1", features = ["derive"] }
async-trait = "0.1"

[dev-dependencies]
ace-media = { path = "../ace-media" }
tokio = { version = "1", features = ["io-util", "macros", "rt-multi-thread"] }
aes = "0.9"
cbc = { version = "0.2", features = ["alloc"] }
tempfile = "3"
serde_json = "1"
