[package]
name = "ace-tracker"
version.workspace = true
edition = "2021"
license.workspace = true
repository.workspace = true

[dependencies]
tokio = { version = "1", features = ["net", "rt", "macros", "time"] }
rand = "0.8"

[dev-dependencies]
hex = "0.4"
tokio = { version = "1", features = ["net", "rt", "macros", "time", "rt-multi-thread"] }
