[package]
name = "ace-wire"
version = "0.1.0"
edition = "2021"

[dependencies]
sha1 = { version = "0.10", features = ["oid"] }
sha2 = "0.10"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
aes = "0.9"
cbc = { version = "0.2", features = ["alloc"] }
rsa = "0.9"
pkcs8 = { version = "0.10", features = ["pem"] }

[dev-dependencies]
hex = "0.4"
