[package]
name = "swarmtest"
version.workspace = true
edition = "2021"
license.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "swarmtest"
path = "src/main.rs"

[dependencies]
ace-wire = { path = "../../crates/ace-wire" }
ace-tracker = { path = "../../crates/ace-tracker" }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
anyhow = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }
sha2 = "0.11"
hex = "0.4"
flate2 = "1"
tar = "0.4"
dirs = "6"
rand = "0.8"
base64ct = { version = "1", features = ["alloc"] }
bytes = "1"
futures-util = "0.3"

[dev-dependencies]
tempfile = "3"
